# kybra-simple-logging

./: .bumpversion.cfg  .gitignore  CLI_README.md  README.md  log.txt  pyproject.toml  requirements-dev.txt  run_linters.sh  setup.cfg  setup.py  test_debug_vars.py  test_logging.py
.github/workflows/: lint.yml  release.yml  test_ic.yml
example/: dfx.json
example/src/: main.py
kybra_simple_db/: __init__.py  constants.py  db_engine.py  entity.py  logger.py  mixins.py  properties.py  storage.py  system_time.py
kybra_simple_logging/: __init__.py  _handler.py  cli.py
src/: main.py
tests/: .gitignore  entrypoint.sh  log.txt  run_test.sh  run_test_ic.sh  run_var_tests.sh
tests/kybra_simple_logging/: __init__.py
tests/kybra_simple_logging_deleteme/: __init__.py  _handler.py
tests/src/: .gitignore  log.txt  main.py
tests/src/tests/: test_audit.py  test_database.py  test_entity.py  test_example_1.py  test_example_2.py  test_functions.py  test_memory_logs.py  test_mixins.py  test_properties.py  test_relationships.py  test_vars.py  utils.py
