[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kybra_simple_db"
version = "0.1.1"
description = "A lightweight key-value database written in Python, intended for use with Kybra on the Internet Computer (IC)"
readme = "README.md"
authors = [
    { name = "Smart Social Contracts", email = "smartsocialcontracts@gmail.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["database", "key-value", "entity", "relationship", "audit"]
requires-python = "==3.10.7"
dependencies = []

[project.urls]
Homepage = "https://github.com/smart-social-contracts/kybra_simple_db"
Repository = "https://github.com/smart-social-contracts/kybra-simple-db.git"
Issues = "https://github.com/smart-social-contracts/kybra-simple-db/issues"

[tool.setuptools]
packages = ["kybra_simple_db"]
