[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kybra_simple_logging"
version = "0.0.4"
description = "A lightweight logging library for Kybra on the Internet Computer (IC)"
readme = "README.md"
authors = [
    { name = "Smart Social Contracts", email = "smartsocialcontracts@gmail.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["database", "key-value", "entity", "relationship", "audit"]
requires-python = "==3.10.7"
dependencies = []

[project.urls]
Homepage = "https://github.com/smart-social-contracts/kybra_simple_logging"
Repository = "https://github.com/smart-social-contracts/kybra-simple-logging.git"
Issues = "https://github.com/smart-social-contracts/kybra-simple-logging/issues"

[tool.setuptools]
packages = ["kybra_simple_logging"]
